Mon Sep 03 00:48:06 2001  George Lebl <jirka@5z.com>

	* gnome-ui-init.c: fix gtk version, duh!

Mon Sep 03 00:42:33 2001  George Lebl <jirka@5z.com>

	* gnome-ui-init.c: use the correct GTK+ version

Sun Sep 02 23:49:34 2001  George Lebl <jirka@5z.com>

	* Makefile.am, gnome-canvas-init.[ch], libgnomeui.h, gnome-ui-init.c:
	  Move gtk init stuff to gnome-ui-init and wipe the canvas init stuff

	* gnome-app-helper.c, gnome-dateedit.c: make constants private and
	  remove unused ones, and use the getters for the gnome directories

	* gnome-client.[ch], gnome-ui-init.c: require the gnome-client module
	  and update it for the new way of doing gnome modules

	* gnome-gconf-ui.[ch], libgnomeui.h:  make the header private and
	  use the new module init stuff.

	* gnome-ui-init.[ch]: do the getter style module stuff, and remove
	  bonoboui stuff which is empty anyway.  Make the old style
	  init stuff deprecated and add gnome_init macro, and put in
	  docs from 1.0 for those.

	* libgnomeui.h: remove the COMPAT_1_0 bit at the bottom, that's quite
	  bogus

	* libgnomeuiP.h: add gnome-gconf-ui.h here

2001-09-02  Anders Carlsson  <andersca@gnu.org>

	* gnome-stock-icons.c:
	* gnome-stock-icons.h:
	Move gnome_icon_size_toolbar into the .c file.

2001-09-02  Anders Carlsson  <andersca@gnu.org>

	* gnome-href.c (gnome_href_clicked): Use the new gnome_url_show
	api.

Sun Sep 02 02:46:07 2001  George Lebl <jirka@5z.com>

	* libgnomeui.h: add gnome-scores.h

Sun Sep 02 00:55:54 2001  George Lebl <jirka@5z.com>

	* gnome-app-helper.c, gnome-entry.c, gnome-ui-init.c:
	  gnome_program_get_name is now gnome_program_get_app_id and
	  gnome_program_get_version is now gnome_program_get_app_version

Sat Sep 01 23:38:29 2001  George Lebl <jirka@5z.com>

	* Makefile.am, gnome-scores.[ch]:  Port to GtkDialog and bring back
	  to life

Sat Sep 01 17:41:16 2001  George Lebl <jirka@5z.com>

	* gnome-dialog.[ch]: bring to strict 1.0 API level, dump clicked
	  method and add grab_focus
